@@ -8,6 +8,7 @@
  - Fix for bug 26305: Obtain group names directly from JCS cache
  - Fix for bug 26266: Ensure user/context information is prepended to log message whenever available
  - Fix for bug 26370: Handle unexpected UnknownHostException gracefully
+ - Fix for bug 26373: Sanitize on "delivery=view", too
 
 * 2013-05-02 - tobias.friedrich@open-xchange.com
 
